# ai_army

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONFIG.md  Dockerfile  ENTRY_POINTS.md  LABELS.md  PRODUCTION.md  README.md  pyproject.toml
.ai_army_workspace/: .ai_army_context.json
.cursor/rules/: deploy-release.mdc  pre-commit-tests.mdc
scripts/: check-production.sh  check_max_lines.py  deploy.py  docker-entrypoint.sh  logs.sh  pre-deploy-cleanup.sh  release-with-log.sh  release.py  setup-droplet.sh  start.py
scripts/deploy/: __init__.py  release_to_droplet.py  requirements.txt
scripts/deploy/services/: __init__.py
scripts/deploy/services/disk/: __init__.py  management.py
scripts/deploy/services/docker/: __init__.py  build.py  cleanup.py  deploy.py  ensure.py  upload.py
scripts/deploy/services/security/: __init__.py  configure.py
scripts/deploy/services/ssh/: __init__.py  connection.py
scripts/deploy/utils/: __init__.py  environment.py  ip_detection.py
src/ai_army/: __init__.py  dev_context.py  logging_config.py  main.py  repo_clone.py  scheduler.py  workspace_manager.py
src/ai_army/chains/: __init__.py  product_chains.py  qa_chains.py  team_lead_chains.py
src/ai_army/config/: __init__.py  agents.yaml  llm_config.py  product_context.yaml  settings.py
src/ai_army/crews/: __init__.py  dev_crew.py  merge_crew.py  product_crew.py  qa_crew.py  team_lead_crew.py
src/ai_army/memory/: __init__.py  context_store.py
src/ai_army/rag/: __init__.py  chunker.py  indexer.py  prebuild.py  retriever.py  runtime_state.py  search.py
src/ai_army/scheduler/: __init__.py  jobs.py  runner.py  token_check.py
src/ai_army/schemas/: __init__.py  product_schemas.py  qa_schemas.py  team_lead_schemas.py
src/ai_army/tools/: __init__.py  git_branch_tools.py  git_tools.py  github_helpers.py  github_issue_tools.py  github_pr_tools.py  github_tools.py  repo_file_tools.py  search_codebase_tool.py
tests/: __init__.py  test_conflict_resolution.py  test_git_tools.py  test_rag_chunker.py  test_rag_indexer.py  test_rag_runtime_state.py  test_repo_clone.py  test_scheduler_runner.py  test_workspace_manager.py
