[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-army"
version = "0.1.0"
description = "AI-Army: Multi-agent orchestration with CrewAI for GitHub-driven development workflow"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.80.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "PyGithub>=2.1.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ai-army = "ai_army.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_army"]
