[tool.poetry]
name = "ai-army"
version = "0.1.1"
description = "AI-Army: Multi-agent orchestration with CrewAI for GitHub-driven development workflow"
readme = "README.md"
authors = ["AI-Army Contributors"]
license = "MIT"
packages = [{ include = "ai_army", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
crewai = { extras = ["tools"], version = "0.1.1" }
langchain = ">=0.3.0"
langchain-anthropic = ">=0.2.0"
PyGithub = ">=2.1.0"
apscheduler = ">=3.10.0"
pydantic-settings = ">=2.0.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"

[tool.poetry.scripts]
ai-army = "ai_army.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
